Clipped bugs

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -36,14 +36,13 @@ ul {
 }
 
 .clipped {
-  /* position: absolute; */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  clip-path: url(#clipPath);
+  width: 50vw; /* Make sure this is the correct width */
+  height: 100px; /* Make sure this is the correct height */
 }
 
 .clipPath {
-  /* position: relative; */
-  /* clip-path: url(#clipPath); */
+  position: relative;
 }
+
+
